# CUDAConwaysGameOfLife

./: .gitignore  README.md
GameOfLife/: CMakeLists.txt  GameOfLife.vcxproj  compute-iteration-serial.cpp  countAliveCells.h  cpu-test.cpp  gpu-game-of-life.cu  main.cpp
GameOfLife/cpu/: SerialCPUGameOfLife.h
GameOfLife/cuda-gpu/: GPUGameOfLife.cu  GPUGameOfLife.h  kernelWithIfs.cu  main.cpp
GameOfLife/opencl-gpu/: CMakeLists.txt  err_code.h  mykernel.cl  openCL-main.cpp  opencl-test.cpp
GameOfLife/opencl-gpu/inputs/: input.params
GameOfLife/test/: CMakeLists.txt
